[package]
name = "desert_surf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = "0.8"
bevy = { version = "0.11.0", features = ["dynamic_linking", "serialize"] }
bevy_rapier3d = { version = "0.22.0", features = ["enhanced-determinism", "debug-render-3d"]}
bevy-scene-hook = "7"
nalgebra = "0.32"
height-mesh = "0.1.0"
serde = {version = "*", features = ["derive"]}
ron = "*"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
